--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+ansible==2.8.8
 astroid==2.3.3
 cachetools==4.0.0
 certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
+cryptography==2.9.2
 google-api-core==1.16.0
 google-api-python-client==1.8.0
 google-auth==1.11.3
@@ -11,25 +14,31 @@ googleapis-common-protos==1.51.0
 httplib2==0.17.0
 idna==2.9
 isort==4.3.21
+Jinja2==2.8
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
+netaddr==0.7.19
 oauth2client==4.1.3
 oauthlib==3.1.0
+pexpect==4.8.0
 pkg-resources==0.0.0
 protobuf==3.11.3
+ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.20
 PyDrive==1.3.1
 pylint==2.4.4
+pyOpenSSL==19.1.0
 pytz==2019.3
 PyYAML==5.3
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
+segno==1.0.0
 six==1.14.0
 typed-ast==1.4.1
 uritemplate==3.0.1
 urllib3==1.25.8
 wrapt==1.11.2
-ansible==2.8.8
-netaddr
